--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.1",
+    "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.13.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
